--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>Web Demo</title>
-</head>
+<html>
 <body>
-  <h1>Xin chào 👋 Đây là web của mình</h1>
+<script src="https://api.cua-ban/luachon.js"></script>
 </body>
 </html>
