--- a/index.html
+++ b/index.html
@@ -3,90 +3,148 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saki Hub</title>
+  <title>Web Dark/Light Mode</title>
   <style>
-    body {
+    /* Reset */
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: Arial, sans-serif;
-      background: linear-gradient(120deg, #4facfe, #00f2fe);
-      color: white;
+    }
+
+    body {
+      line-height: 1.6;
+      padding: 20px;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    body.dark {
+      background-color: #121212;
+      color: #ffffff;
+    }
+
+    body.light {
+      background-color: #f5f5f5;
+      color: #222;
+    }
+
+    header {
       text-align: center;
-      overflow: hidden;
+      padding: 20px;
+      border-bottom: 2px solid #333;
     }
 
-    /* Loading */
-    #loading {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
+    header h1 {
+      font-size: 2rem;
+    }
+
+    nav {
+      margin: 20px 0;
       display: flex;
-      align-items: center;
       justify-content: center;
-      background: #000;
-      z-index: 1000;
+      gap: 20px;
     }
 
-    .spinner {
-      border: 6px solid #f3f3f3;
-      border-top: 6px solid #00f2fe;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      animation: spin 1s linear infinite;
+    nav a {
+      color: inherit;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: color 0.3s;
     }
 
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+    nav a:hover {
+      color: #00bcd4;
     }
 
-    /* Nội dung chính */
-    #content {
-      display: none;
-      padding: 50px;
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      transition: background 0.3s;
     }
 
-    h1 {
-      font-size: 40px;
-      margin-bottom: 20px;
+    body.dark .container {
+      background: #1e1e1e;
     }
 
-    button {
-      background: white;
-      color: #4facfe;
+    body.light .container {
+      background: #fff;
+    }
+
+    h2 {
+      margin-bottom: 10px;
+      color: #00bcd4;
+    }
+
+    p {
+      margin-bottom: 15px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      margin-top: 20px;
+      border-top: 2px solid #333;
+      font-size: 0.9rem;
+      color: #777;
+    }
+
+    .toggle-btn {
+      position: fixed;
+      top: 15px;
+      right: 15px;
+      padding: 10px 15px;
       border: none;
-      padding: 15px 25px;
       border-radius: 8px;
-      font-size: 16px;
+      background: #00bcd4;
+      color: #fff;
       cursor: pointer;
+      font-weight: bold;
       transition: 0.3s;
     }
 
-    button:hover {
-      background: #00f2fe;
-      color: white;
+    .toggle-btn:hover {
+      background: #0097a7;
     }
   </style>
 </head>
-<body>
-  <!-- Loading -->
-  <div id="loading">
-    <div class="spinner"></div>
+<body class="dark">
+  <header>
+    <h1>🌙 Web Dark/Light Mode</h1>
+    <nav>
+      <a href="#">Trang Chủ</a>
+      <a href="#">Giới Thiệu</a>
+      <a href="#">Liên Hệ</a>
+    </nav>
+  </header>
+
+  <button class="toggle-btn" onclick="toggleMode()">Đổi Giao Diện</button>
+
+  <div class="container">
+    <h2>Giới thiệu</h2>
+    <p>Đây là một website có thể chuyển đổi giữa Dark Mode 🌙 và Light Mode ☀️ bằng nút bấm góc phải màn hình.</p>
+
+    <h2>Nội dung</h2>
+    <p>Bạn có thể thêm bất kỳ nội dung nào vào đây, ví dụ: blog, thông tin cá nhân, dự án, hoặc bài viết.</p>
   </div>
 
-  <!-- Nội dung -->
-  <div id="content">
-    <h1>Chào mừng đến với Saki Hub 🚀</h1>
-    <p>Trang web demo được code bằng HTML + CSS + JS.</p>
-    <button onclick="alert('Cảm ơn bạn đã bấm!')">Bấm vào tôi</button>
-  </div>
+  <footer>
+    © 2025 - Web Dark/Light Mode
+  </footer>
 
   <script>
-    // Giả lập hiệu ứng loading 2s
-    window.onload = function() {
-      setTimeout(() => {
-        document.getElementById("loading").style.display = "none";
-        document.getElementById("content").style.display = "block";
-      }, 2000);
+    function toggleMode() {
+      const body = document.body;
+      if (body.classList.contains("dark")) {
+        body.classList.remove("dark");
+        body.classList.add("light");
+      } else {
+        body.classList.remove("light");
+        body.classList.add("dark");
+      }
     }
   </script>
 </body>
