--- a/index.html
+++ b/index.html
@@ -3,83 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Giao Diện Tối</title>
-  <style>
-    /* Reset CSS */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-
-    body {
-      background-color: #121212;
-      color: #ffffff;
-      line-height: 1.6;
-      padding: 20px;
-    }
-
-    header {
-      text-align: center;
-      padding: 20px;
-      border-bottom: 2px solid #333;
-    }
-
-    header h1 {
-      font-size: 2rem;
-      color: #f5f5f5;
-    }
-
-    nav {
-      margin: 20px 0;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    nav a {
-      color: #bbb;
-      text-decoration: none;
-      font-size: 1.1rem;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #00bcd4;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: #1e1e1e;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.5);
-    }
-
-    h2 {
-      margin-bottom: 10px;
-      color: #00bcd4;
-    }
-
-    p {
-      margin-bottom: 15px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      margin-top: 20px;
-      border-top: 2px solid #333;
-      font-size: 0.9rem;
-      color: #777;
-    }
-  </style>
+  <title>Web Dark/Light Mode</title>
+  <!-- Liên kết tới file CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="dark">
   <header>
-    <h1>🌙 Web Giao Diện Tối</h1>
+    <h1>🌙 Web Dark/Light Mode</h1>
     <nav>
       <a href="#">Trang Chủ</a>
       <a href="#">Giới Thiệu</a>
@@ -87,16 +17,31 @@
     </nav>
   </header>
 
+  <button class="toggle-btn" onclick="toggleMode()">Đổi Giao Diện</button>
+
   <div class="container">
     <h2>Giới thiệu</h2>
-    <p>Đây là một website với giao diện tối (dark theme). Giao diện này thân thiện với mắt khi sử dụng vào ban đêm hoặc trong môi trường thiếu sáng.</p>
+    <p>Đây là một website có thể chuyển đổi giữa Dark Mode 🌙 và Light Mode ☀️ bằng nút bấm góc phải màn hình.</p>
 
     <h2>Nội dung</h2>
     <p>Bạn có thể thêm bất kỳ nội dung nào vào đây, ví dụ: blog, thông tin cá nhân, dự án, hoặc bài viết.</p>
   </div>
 
   <footer>
-    © 2025 - Web Giao Diện Tối
+    © 2025 - Web Dark/Light Mode
   </footer>
+
+  <script>
+    function toggleMode() {
+      const body = document.body;
+      if (body.classList.contains("dark")) {
+        body.classList.remove("dark");
+        body.classList.add("light");
+      } else {
+        body.classList.remove("light");
+        body.classList.add("dark");
+      }
+    }
+  </script>
 </body>
 </html>
