--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Dark/Light Mode</title>
   <!-- Liên kết tới file CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="dark">
   <header>
@@ -31,6 +31,7 @@
     © 2025 - Web Dark/Light Mode
   </footer>
 
+  <!-- Script -->
   <script>
     function toggleMode() {
       const body = document.body;
