--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       background-color: #222;
       color: white;
       padding: 10px 16px;
-      font-size: 16px;
+      font-size: 20px; /* lớn hơn để hiển thị ba gạch rõ */
       border: none;
       cursor: pointer;
       border-radius: 5px;
@@ -91,7 +91,7 @@
 <body>
   <header>
     <div class="dropdown">
-      <button class="dropbtn">Menu</button>
+      <button class="dropbtn">☰</button>
       <div class="dropdown-content">
         <a href="#">Home</a>
         <a href="#">Script</a>
@@ -103,7 +103,7 @@
   <div class="container">
     <h1>🌑 Web Dark Mode</h1>
     <h2>Giới thiệu</h2>
-    <p>Đây là website sử dụng giao diện tối và có menu Drop-down ở góc trên bên trái với các mục Home, Script, Connect.</p>
+    <p>Đây là website sử dụng giao diện tối và có menu Drop-down ở góc trên bên trái với các mục Home, Script, Connect. Nút menu hiển thị bằng dấu ba gạch (☰).</p>
   </div>
 </body>
 </html>
