--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Web Dark Mode với Drop-down</title>
   <style>
     body {
-      background-color: #000000;
+      background-color: #000000; /* nền toàn web màu đen */
       color: #ffffff;
       font-family: Arial, sans-serif;
       margin: 0;
@@ -33,7 +33,7 @@
       background-color: #222;
       color: white;
       padding: 10px 16px;
-      font-size: 20px; /* lớn hơn để hiển thị ba gạch rõ */
+      font-size: 20px; /* hiển thị dấu ba gạch rõ */
       border: none;
       cursor: pointer;
       border-radius: 5px;
@@ -74,8 +74,8 @@
       max-width: 800px;
       margin: 40px auto;
       padding: 20px;
-      background-color: #111;
-      border-radius: 10px;
+      /* nền container giống nền web */
+      background-color: #000000;
     }
 
     h1, h2 {
@@ -103,7 +103,7 @@
   <div class="container">
     <h1>🌑 Web Dark Mode</h1>
     <h2>Giới thiệu</h2>
-    <p>Đây là website sử dụng giao diện tối và có menu Drop-down ở góc trên bên trái với các mục Home, Script, Connect. Nút menu hiển thị bằng dấu ba gạch (☰).</p>
+    <p>Toàn bộ web và nội dung đều có nền màu đen, bao gồm phần giới thiệu, tạo cảm giác đồng nhất và tối cho mắt.</p>
   </div>
 </body>
 </html>
