--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
     </div>
 
-    <div class="logo" id="logo">Web Dark Mode</div>
+    <div class="logo" id="logo">Saki-Hub</div>
   </header>
 
   <!-- Nội dung chính -->
